fix image not showing error

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: sans-serif;
-    background-image: url("/image/homeback.png");
+    background-image: url("image/homeback.png");
     background-repeat: no-repeat;
     background-size: 100%;
   
